worked thru class 9 content up until before jinga loops

--- a/week9/class/app2forms/templates/index.html
+++ b/week9/class/app2forms/templates/index.html
@@ -6,7 +6,8 @@
         <title>hello</title>
     </head>
     <body>
-        <form method="get">
+        <!-- action defines where the user will be sent when they submit this form-->
+        <form action="/greet" method="get">
             <input autocomplete="off" autofocus name="name" placeholder="Name" type="text">
             <input type="submit">
         </form>
