--- a/week9/class/app1/templates/index.html
+++ b/week9/class/app1/templates/index.html
@@ -6,9 +6,8 @@
         <title>hello</title>
     </head>
     <body>
-        <form method="get">
-            <input autocomplete="off" autofocus name="name" placeholder="Name" type="text">
-            <input type="submit">
-        </form>
+        <!-- flask syntax to insert variable 
+             now we can change the value for name in the url and it will display-->
+       hello, {{name}}
     </body>
 </html>
