--- a/week9/class/app3layouts/templates/index.html
+++ b/week9/class/app3layouts/templates/index.html
@@ -1,15 +1,10 @@
-<!DOCTYPE html>
+{% extends "layout.html" %}
 
-<html lang="en">
-    <head>
-        <meta name="viewport" content="initial-scale=1, width=device-width">
-        <title>hello</title>
-    </head>
-    <body>
-        <!-- action defines where the user will be sent when they submit this form-->
-        <form action="/greet" method="get">
-            <input autocomplete="off" autofocus name="name" placeholder="Name" type="text">
-            <input type="submit">
-        </form>
-    </body>
-</html>
+{% block body %}
+
+    <form action="/greet" method="get">
+        <input autocomplete="off" autofocus name="name" placeholder="Name" type="text">
+        <input type="submit">
+    </form>
+
+{% endblock %}
